force-app/main/default/objects/Lead/fields/Academy_Name__c.field-meta.xml
<CustomField>
    <fullName>Academy_Name__c</fullName>
    <label>Academy Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>