force-app/main/default/objects/Lead/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pro Play - Under 18 (₹199)</fullName>
            </value>
            <value>
                <fullName>Fun Play - No Age Limit (₹99)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>