force-app/main/default/objects/Lead/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Contacted</fullName>
                <default>true</default>
                <label>Not Contacted</label>
            </value>
            <value>
                <fullName>Contacted and updated</fullName>
            </value>
            <value>
                <fullName>Contacted, No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>