force-app/main/default/objects/Lead/fields/Food_Amount__c.field-meta.xml
<CustomField>
    <fullName>Food_Amount__c</fullName>
    <formula>IF( ISPICKVAL( Lunch_Preference__c , &apos;Arrange on my own&apos;) , 0, IF( ISPICKVAL( Lunch_Preference__c , &apos;1X-FREE&apos;) , 0, IF( ISPICKVAL( Lunch_Preference__c , &apos;2X-₹60&apos;) , 60, IF( ISPICKVAL( Lunch_Preference__c , &apos;3X-₹120&apos;) , 120, 0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Food Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>