force-app/main/default/objects/Lead/fields/Food_Count__c.field-meta.xml
<CustomField>
    <fullName>Food_Count__c</fullName>
    <formula>IF( ISPICKVAL( Lunch_Preference__c , &apos;Arrange on my own&apos;) , 0, IF( ISPICKVAL( Lunch_Preference__c , &apos;1X-FREE&apos;) , 1, IF( ISPICKVAL( Lunch_Preference__c , &apos;2X-₹60&apos;) , 2, IF( ISPICKVAL( Lunch_Preference__c , &apos;3X-₹120&apos;) , 3, 0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Food Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>