force-app/main/default/objects/Lead/fields/Goodies_Issued__c.field-meta.xml
<CustomField>
    <fullName>Goodies_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Goodies Issued</label>
    <type>Checkbox</type>
</CustomField>