force-app/main/default/objects/Lead/fields/Lunch_Preference__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Preference__c</fullName>
    <label>Lunch Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arrange on my own</fullName>
            </value>
            <value>
                <fullName>1X-FREE</fullName>
            </value>
            <value>
                <fullName>2X-₹60</fullName>
            </value>
            <value>
                <fullName>3X-₹120</fullName>
            </value>
            <value>
                <fullName>Pay on the Spot (₹50)</fullName>
                <isActive>false</isActive>
                <label>Pay on the Spot (₹50)</label>
            </value>
            <value>
                <fullName>Pay on the Spot (₹60)</fullName>
                <isActive>false</isActive>
                <label>Pay on the Spot (₹60)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>