force-app/main/default/objects/Lead/fields/Paid_for_Food__c.field-meta.xml
<CustomField>
    <fullName>Paid_for_Food__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid for Food</label>
    <type>Checkbox</type>
</CustomField>