force-app/main/default/objects/Lead/fields/Paid_Status__c.field-meta.xml
<CustomField>
    <fullName>Paid_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration Paid Status</label>
    <type>Checkbox</type>
</CustomField>