force-app/main/default/objects/Lead/fields/Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name__c</fullName>
    <label>Parent Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>