force-app/main/default/objects/Lead/fields/Registration_Amount__c.field-meta.xml
<CustomField>
    <fullName>Registration_Amount__c</fullName>
    <formula>IF(ISPICKVAL( Category__c,&quot;Pro Play - Under 18 (₹199)&quot;),199,99)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>