force-app/main/default/objects/Lead/fields/Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>Registration_Id__c</fullName>
    <displayFormat>SCT-{0000}</displayFormat>
    <label>Registration Id</label>
    <type>AutoNumber</type>
</CustomField>