force-app/main/default/objects/Lead/fields/Total_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Amount__c</fullName>
    <formula>IF( Paid_Status__c = true,  Registration_Amount__c , 0)  +  IF( Paid_for_Food__c ,  Food_Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>