force-app/main/default/objects/Lead/recordTypes/Regualr_Class.recordType-meta.xml
<RecordType>
    <fullName>Regualr_Class</fullName>
    <active>true</active>
    <businessProcess>Status</businessProcess>
    <label>Regualr Class</label>
</RecordType>